hoàn thành CRUD workspace và document
