# app/Http/Controllers/WorkspaceController.php
@@ -6,8 +6,63 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
 use App\Models\Workspace;
 
+use Illuminate\Http\JsonResponse;
+use OpenApi\Attributes\MediaType;
+use OpenApi\Attributes\Post;
+use OpenApi\Attributes\Property;
+use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Response;
+use OpenApi\Attributes\Schema;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes as OA;
+
 class WorkspaceController extends Controller
 {
+    #[OA\Get(
+        path: "/workspace", operationId: "workspace", summary: "Get data workspace",
+        requestBody: new RequestBody
+        (
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            
+                        ],
+                        example: []
+                    ),
+                )
+            ]
+        ),
+        tags: ["Workspace"],
+        responses: [
+            new Response(response: 200, description: "Get data workspace successfully", content: new JsonContent
+                (
+                    properties:
+                    [
+                        new Property(property: "workspace", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object")
+                    ],
+                    example:
+                    [
+                        "workspace" => [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu",
+                            "updated_at" => "2022-11-09T17:55:48.000000Z",
+                            "created_at" => "2022-11-09T17:55:48.000000Z"]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Error in get data workspace"),
+        ],
+    )]
+
     /**
      * Display a listing of the resource.
      *
@@ -30,6 +85,51 @@ class WorkspaceController extends Controller
         //
     }
 
+    #[Post(
+        path: "/workspace", operationId: "workspaceAdd", summary: "Add a workspace",
+        requestBody: new RequestBody
+        (
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                        ],
+                        example: ["name" => "abc le.org", "description" => "pass word"]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Workspace"],
+        responses: [
+            new Response(response: 200, description: "Add data workspace successfully", content: new JsonContent
+                (
+                    properties:
+                    [
+                        new Property(property: "workspace", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object")
+                    ],
+                    example:
+                    [
+                        "workspace" => [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu",
+                            "updated_at" => "2022-11-09T17:55:48.000000Z",
+                            "created_at" => "2022-11-09T17:55:48.000000Z"]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Error in add workspace"),
+        ],
+    )]
     /**
      * Store a newly created resource in storage.
      *
@@ -50,15 +150,59 @@ class WorkspaceController extends Controller
         return response()->json($data);
     }
 
+    #[OA\Get(
+        path: "/workspace/{id}", operationId: "workspaceGetById", summary: "Get data workspace by id",
+        requestBody: new RequestBody
+        (
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int")
+                        ],
+                        example: ["id"=>1]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Workspace"],
+        responses: [
+            new Response(response: 200, description: "Get a workspace by id successfully", content: new JsonContent
+                (
+                    properties:
+                    [
+                        new Property(property: "workspace", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object")
+                    ],
+                    example:
+                    [
+                        "workspace" => [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu",
+                            "updated_at" => "2022-11-09T17:55:48.000000Z",
+                            "created_at" => "2022-11-09T17:55:48.000000Z"]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Error in get workspace by id"),
+        ],
+    )]
     /**
      * Display the specified resource.
      *
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function show(Request $req)
+    public function show($id)
     {
-        $id = $req->id;
+        
         $data = DB::table('workspaces')->find($id);
         return response()->json($data);
     }
@@ -74,6 +218,57 @@ class WorkspaceController extends Controller
         //
     }
 
+    #[OA\Post(
+        path: "/workspace{id}", operationId: "workspaceUpdate", summary: "Update workspace",
+        requestBody: new RequestBody
+        (
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string")
+                        ],
+                        example: [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu"
+                            
+                        ]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Workspace"],
+        responses: [
+            new Response(response: 200, description: "Update workspace successfully", content: new JsonContent
+                (
+                    properties:
+                    [
+                        new Property(property: "workspace", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object")
+                    ],
+                    example:
+                    [
+                        "workspace" => [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu",
+                            "updated_at" => "2022-11-09T17:55:48.000000Z",
+                            "created_at" => "2022-11-09T17:55:48.000000Z"]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Error in update workspace"),
+        ],
+    )]
     /**
      * Update the specified resource in storage.
      *
@@ -81,13 +276,13 @@ class WorkspaceController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function update(Request $req)
+    public function update(Request $req, int $id)
     {
         $name = $req->name;
         $description = $req->description;
         $created_at = now();
         $updated_at = now();
-        $id = $req->id;
+        
         DB::table('workspaces')
             ->where('id', $id)
             ->update(['name' => $name, 'description'=> $description, 'created_at'=> $created_at, 'updated_at'=> $updated_at]);
@@ -97,15 +292,59 @@ class WorkspaceController extends Controller
         return response()->json($data);
     }
 
+    #[OA\Delete(
+        path: "/workspace{id}", operationId: "workspaceDelete", summary: "Delete a workspace",
+        requestBody: new RequestBody
+        (
+            content: [
+                new MediaType(
+                    mediaType: "application/json",
+                    schema: new Schema(
+                        properties: [
+                            new Property(property: "id", type: "int"),
+                        ],
+                        example: ["id"=>1]
+                    ),
+                )
+            ]
+        ),
+        tags: ["Workspace"],
+        responses: [
+            new Response(response: 200, description: "Delete workspace successfully", content: new JsonContent
+                (
+                    properties:
+                    [
+                        new Property(property: "workspace", properties: [
+                            new Property(property: "id", type: "int"),
+                            new Property(property: "name", type: "string"),
+                            new Property(property: "description", type: "string"),
+                            new Property(property: "updated_at", type: "string"),
+                            new Property(property: "created_at", type: "string"),
+                        ], type: "object")
+                    ],
+                    example:
+                    [
+                        "workspace" => [
+                            "id" => 1,
+                            "name" => "abc",
+                            "description" => "hjhjshjdyuy uysuyu uyu",
+                            "updated_at" => "2022-11-09T17:55:48.000000Z",
+                            "created_at" => "2022-11-09T17:55:48.000000Z"]
+                    ]
+                ),
+            ),
+            new Response(response: 500, description: "Error in delete workspace"),
+        ],
+    )]
     /**
      * Remove the specified resource from storage.
      *
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function destroy(Request $req)
+    public function destroy(int $id)
     {
-        $id = $req->id;
+        
         $deleted = DB::table('workspaces')->where('id', '=', $id)->delete();
         //gui ve dl sau khi them
         $data = DB::table("workspaces")->get();
