# storage/api-docs/api-docs.json
@@ -150,6 +150,372 @@
                     }
                 }
             }
+        },
+        "/workspace": {
+            "get": {
+                "tags": [
+                    "Workspace"
+                ],
+                "summary": "Get data workspace",
+                "description": "Display a listing of the resource.",
+                "operationId": "workspace",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {},
+                                "example": []
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Get data workspace successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "workspace": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "workspace": {
+                                        "id": 1,
+                                        "name": "abc",
+                                        "description": "hjhjshjdyuy uysuyu uyu",
+                                        "updated_at": "2022-11-09T17:55:48.000000Z",
+                                        "created_at": "2022-11-09T17:55:48.000000Z"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error in get data workspace"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Workspace"
+                ],
+                "summary": "Add a workspace",
+                "description": "Store a newly created resource in storage.",
+                "operationId": "workspaceAdd",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "abc le.org",
+                                    "description": "pass word"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add data workspace successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "workspace": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "workspace": {
+                                        "id": 1,
+                                        "name": "abc",
+                                        "description": "hjhjshjdyuy uysuyu uyu",
+                                        "updated_at": "2022-11-09T17:55:48.000000Z",
+                                        "created_at": "2022-11-09T17:55:48.000000Z"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error in add workspace"
+                    }
+                }
+            }
+        },
+        "/workspace/{id}": {
+            "get": {
+                "tags": [
+                    "Workspace"
+                ],
+                "summary": "Get data workspace by id",
+                "description": "Display the specified resource.",
+                "operationId": "workspaceGetById",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Get a workspace by id successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "workspace": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "workspace": {
+                                        "id": 1,
+                                        "name": "abc",
+                                        "description": "hjhjshjdyuy uysuyu uyu",
+                                        "updated_at": "2022-11-09T17:55:48.000000Z",
+                                        "created_at": "2022-11-09T17:55:48.000000Z"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error in get workspace by id"
+                    }
+                }
+            }
+        },
+        "/workspace{id}": {
+            "post": {
+                "tags": [
+                    "Workspace"
+                ],
+                "summary": "Update workspace",
+                "description": "Update the specified resource in storage.",
+                "operationId": "workspaceUpdate",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    },
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": 1,
+                                    "name": "abc",
+                                    "description": "hjhjshjdyuy uysuyu uyu"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update workspace successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "workspace": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "workspace": {
+                                        "id": 1,
+                                        "name": "abc",
+                                        "description": "hjhjshjdyuy uysuyu uyu",
+                                        "updated_at": "2022-11-09T17:55:48.000000Z",
+                                        "created_at": "2022-11-09T17:55:48.000000Z"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error in update workspace"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Workspace"
+                ],
+                "summary": "Delete a workspace",
+                "description": "Remove the specified resource from storage.",
+                "operationId": "workspaceDelete",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "id": 1
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Delete workspace successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "workspace": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                },
+                                                "description": {
+                                                    "type": "string"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string"
+                                                },
+                                                "created_at": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "workspace": {
+                                        "id": 1,
+                                        "name": "abc",
+                                        "description": "hjhjshjdyuy uysuyu uyu",
+                                        "updated_at": "2022-11-09T17:55:48.000000Z",
+                                        "created_at": "2022-11-09T17:55:48.000000Z"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error in delete workspace"
+                    }
+                }
+            }
         }
     }
 }
